@@ -1,3 +1,8 @@
+2006-02-02  Brian Warner  <warner@lothar.com>
+
+	* test_negotiate.py: skip pb-vs-web tests when we don't have
+	twisted.web, thanks to <marienz> for the patch.
+
 2006-01-26  Brian Warner  <warner@lothar.com>
 
 	* test/test_banana.py (ErrorfulSlicer.next): don't use callLater()
